crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_inline_code_with_double_backticks.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1928
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - Use ``` ``nested`` ``` for a value with double backticks.

:::
