crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_label_with_backticks.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1951
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `` `a` ``
  - A non-syntactic argument name with single backticks.

- - ``` ``b`` ```
  - A label with a double-backtick run.

:::
