crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_list_only_with_cr_continuation_starts_with_list_marker.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1860
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - - First line.  
      \- not a cell marker. 
    - Second item. 

:::
