crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_multi_paragraph.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - First paragraph.

    Second paragraph of the description.

:::
