crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_preformatted_only.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1742
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - 

    ```
    result <- foo(x)
    print(result)
    ```

:::
