crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_preformatted_with_trailing_blank_line.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1943
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - 

    ```
    code

    ```

:::
