crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_backticks_in_preformatted.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1767
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - Code containing a fence-like line: 

    ````
    ```r
    x <- 1
    ```
    ````

:::
