crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_cr.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1737
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - First line.  
    Second line.

:::
