crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_cr_continuation_all_marker_forms.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1927
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - First line.  
    \- hyphen.  
    \* asterisk.  
    \+ plus.  
    1\. ordered period.  
    1\) ordered paren.

:::
