crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_cr_continuation_starts_with_list_marker.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1835
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - Options: 

    - First line.  
      \- not a new item. 
    - Second item. 

:::
